@@ -43,11 +43,13 @@
     driver.&lt;p&gt;
 
     When used with HP&apos;s &quot;hpijs&quot; driver, this printer
-    auto-detects the paper type and does appropriate dithering and
-    colour adjustment internally, controlled by the hardware. So if
-    you insert photo paper, the printer will print in its highest
-    quality, no paper type choice in the driver&apos;s options is
-    needed.&lt;p&gt;
+    does the dithering and color adjustment internally as input it
+    takes simple RGB data as used for screen display.&lt;p&gt;
+
+    Note that in contrary to most other current HP inkjet printers
+    there is no paper type sensor in the printer. You have to choose
+    one of the photo modes manually when using photo paper. There are
+    photo modes with 300 and 600 dpi.&lt;p&gt;
 
     </en>
   </comments>
