@@ -38,18 +38,19 @@
   <!--no "contrib_url"-->
   <comments>
     <en>
+
     Same as the HP Business Inkjet 2250, plus a second paper tray and
     a HP JetDirect internal print server&lt;p&gt;
 
-    When used with HP&apos;s &quot;hpijs&quot; driver and probably
-    also in PostScript mode, this printer auto-detects the paper type
-    and does appropriate dithering and colour adjustment internally,
-    controlled by the hardware. So even when GhostScript with the
-    &quot;hpijs&quot; driver only renders the image with 300 or 600
-    dpi, the 1200x600 dpi are used for the internal dithering. So if
-    you insert photo paper, the printer will print in its highest
-    quality, no paper type choice in the driver&apos;s options is
-    needed.&lt;p&gt;
+    When used with HP&apos;s &quot;hpijs&quot; driver, this printer
+    does the dithering and color adjustment internally as input it
+    takes simple RGB data as used for screen display.&lt;p&gt;
+
+    Note that in contrary to most other current HP inkjet printers
+    there is no paper type sensor in the printer. You have to choose
+    one of the photo modes manually when using photo paper. There are
+    photo modes with 300 and 600 dpi.&lt;p&gt;
+
     </en>
   </comments>
 </printer>
