@@ -31,6 +31,18 @@
     Repackaged &lt;a
     href=&quot;show_printer.cgi?recnum=HP-2500C&quot;&gt;2500C&lt;/a&gt;.
 
+    Best output quality reachable with the &quot;hpijs&quot;
+    driver.&lt;p&gt;
+
+    When used with HP&apos;s &quot;hpijs&quot; driver, this printer
+    does the dithering and color adjustment internally as input it
+    takes simple RGB data as used for screen display.&lt;p&gt;
+
+    Note that in contrary to most other current HP inkjet printers
+    there is no paper type sensor in the printer. You have to choose
+    one of the photo modes manually when using photo paper. There are
+    photo modes with 300 and 600 dpi.&lt;p&gt;
+
     </en>
   </comments>
 </printer>
