@@ -58,16 +58,20 @@
     &quot;pcl-900&quot;).&lt;p&gt;
 
     When used with HP&apos;s &quot;hpijs&quot; driver, this printer
-    auto-detects the paper type and ink cartridge type and does
+    auto-detects the ink cartridge type and does
     appropriate dithering and colour adjustment internally, controlled
     by the hardware. So when GhostScript with the &quot;hpijs&quot;
     driver only renders the image with 300 or 600 dpi, higher
     resolutions are used for the internal dithering. So if you insert
-    photo paper, the printer will print in photo quality, no paper
-    type choice in the driver&apos;s options is needed. There is also
-    a special high resolution mode where the image is rendered in 1200
-    dpi and interpolated to 4800x1200 dpi by the hardware, without
-    paper detection, intended for photo paper only.&lt;p&gt;
+    a photo cartridge, the printer automatically switches to the 6-ink
+    process.&lt;p&gt;
+
+    Note that in contrary to most other current HP inkjet printers
+    there is no paper type sensor in the printer. You have to choose
+    one of the photo modes manually when using photo paper. There are
+    photo modes with 300 and 600 dpi and a special high resolution
+    photo mode where the image is rendered in 1200 dpi and
+    interpolated to 4800x1200 dpi by the hardware.&lt;p&gt;
 
     Full-Bleed printing is supported with &quot;hpijs&quot;.&lt;p&gt;
 
