@@ -1,3 +1,13 @@
+2003-05-21  David Suffield <david.suffield@hp.com>
+
+	* printer/HP-DeskJet_450.xml, printer/HP-Business_Inkjet_2200.xml,
+	  printer/HP-Business_Inkjet_2230.xml,
+	  printer/HP-Business_Inkjet_2250.xml,
+	  printer/HP-Business_Inkjet_2250TN.xml,
+	  printer/HP-Business_Inkjet_2280.xml, printer/HP-2500C.xml,
+	  printer/HP-2000C.xml, printer/HP-DesignJet_ColorPro_CAD.xml:
+	  Updated text for printers without paper type sensor.
+
 2003-05-19  David Suffield <david.suffield@hp.com>
 
 	* printer/HP-PSC_1200.xml, HP-PSC_1110.xml, HP-PSC_1100.xml,
